--- a/ES6_classes/package.json
+++ b/ES6_classes/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
+    "lint:fix": "eslint --fix \"**/*.js\"",
     "check-lint": "lint [0-9]*.js",
     "dev": "npx babel-node",
     "test": "jest",
@@ -8,10 +9,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
     "@babel/node": "^7.8.0",
+    "@babel/preset-env": "^7.6.0",
     "eslint": "^6.4.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0"
